- German localization almost completed

--- a/.gitattributes
+++ b/.gitattributes
@@ -120,6 +120,9 @@ English.lproj/WebPreview.nib/keyedobjects.nib -text
 /Functions.m -text
 /GeneralPreferences.h -text
 /GeneralPreferences.m -text
+German.lproj/AboutPanel.nib/classes.nib -text
+German.lproj/AboutPanel.nib/info.nib -text
+German.lproj/AboutPanel.nib/keyedobjects.nib -text
 German.lproj/Acknowledgements.rtf -text
 German.lproj/DocumentProxy.nib/classes.nib -text
 German.lproj/DocumentProxy.nib/info.nib -text
@@ -127,6 +130,13 @@ German.lproj/DocumentProxy.nib/keyedobjects.nib -text
 German.lproj/EditPrefs.nib/classes.nib -text
 German.lproj/EditPrefs.nib/info.nib -text
 German.lproj/EditPrefs.nib/keyedobjects.nib -text
+German.lproj/FindAll.nib/classes.nib -text
+German.lproj/FindAll.nib/data.dependency -text
+German.lproj/FindAll.nib/info.nib -text
+German.lproj/FindAll.nib/keyedobjects.nib -text
+German.lproj/FindReplace.nib/classes.nib -text
+German.lproj/FindReplace.nib/info.nib -text
+German.lproj/FindReplace.nib/keyedobjects.nib -text
 German.lproj/GeneralPrefs.nib/classes.nib -text
 German.lproj/GeneralPrefs.nib/info.nib -text
 German.lproj/GeneralPrefs.nib/keyedobjects.nib -text
@@ -141,12 +151,24 @@ German.lproj/MainMenu.nib/keyedobjects.nib -text
 German.lproj/OpenPanelAccessory.nib/classes.nib -text
 German.lproj/OpenPanelAccessory.nib/info.nib -text
 German.lproj/OpenPanelAccessory.nib/keyedobjects.nib -text
+German.lproj/PlainTextEditor.nib/classes.nib -text
+German.lproj/PlainTextEditor.nib/info.nib -text
+German.lproj/PlainTextEditor.nib/keyedobjects.nib -text
+German.lproj/PlainTextWindow.nib/classes.nib -text
+German.lproj/PlainTextWindow.nib/info.nib -text
+German.lproj/PlainTextWindow.nib/keyedobjects.nib -text
 German.lproj/RendezvousBrowser.nib/classes.nib -text
 German.lproj/RendezvousBrowser.nib/info.nib -text
 German.lproj/RendezvousBrowser.nib/keyedobjects.nib -text
 German.lproj/SavePanelAccessory.nib/classes.nib -text
 German.lproj/SavePanelAccessory.nib/info.nib -text
 German.lproj/SavePanelAccessory.nib/keyedobjects.nib -text
+German.lproj/SelectEncodingsPanel.nib/classes.nib -text
+German.lproj/SelectEncodingsPanel.nib/info.nib -text
+German.lproj/SelectEncodingsPanel.nib/objects.nib -text
+German.lproj/Setup.nib/classes.nib -text
+German.lproj/Setup.nib/info.nib -text
+German.lproj/Setup.nib/keyedobjects.nib -text
 German.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help[!!-~]idx -text
 German.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help.html -text
 German.lproj/SubEthaEdit[!!-~]Help/css/access.css -text
@@ -161,6 +183,9 @@ German.lproj/SubEthaEdit[!!-~]Help/img/favicon.png -text
 German.lproj/SubEthaEdit[!!-~]Help/img/see-small.png -text
 German.lproj/SubEthaEdit[!!-~]Help/img/see.png -text
 German.lproj/SubEthaEdit[!!-~]Help/img/vertline2.gif -text
+German.lproj/WebPreview.nib/classes.nib -text
+German.lproj/WebPreview.nib/info.nib -text
+German.lproj/WebPreview.nib/keyedobjects.nib -text
 /GetURLCommand.h -text
 /GetURLCommand.m -text
 /GutterRulerView.h -text
