- Added German and Japanese Mode localizations

--- a/.gitattributes
+++ b/.gitattributes
@@ -274,30 +274,44 @@ Japanese.lproj/WebPreview.nib/keyedobjects.nib -text
 /LayoutManager.m -text
 Modes/ActionScript.mode/Contents/Info.plist -text
 Modes/ActionScript.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/ActionScript.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/ActionScript.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/ActionScript.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/ActionScript.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/Applescript.mode/Contents/Info.plist -text
 Modes/Applescript.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/Applescript.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/Applescript.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/Applescript.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/Applescript.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/Base.mode/Contents/Info.plist -text
 Modes/Base.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/Base.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/Base.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/C++.mode/Contents/Info.plist -text
 Modes/C++.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/C++.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/C++.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/C++.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/C++.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/C.mode/Contents/Info.plist -text
 Modes/C.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/C.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/C.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/C.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/C.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/CSS.mode/Contents/Info.plist -text
 Modes/CSS.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/CSS.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/CSS.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/CSS.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/CSS.mode/Contents/Resources/Symbol!.png -text
 Modes/CSS.mode/Contents/Resources/SymbolID.png -text
 Modes/CSS.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/HTML.mode/Contents/Info.plist -text
 Modes/HTML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/HTML.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/HTML.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/HTML.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/HTML.mode/Contents/Resources/Symbol!.png -text
 Modes/HTML.mode/Contents/Resources/SymbolD.png -text
@@ -306,56 +320,80 @@ Modes/HTML.mode/Contents/Resources/Symbola.png -text
 Modes/HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/Java.mode/Contents/Info.plist -text
 Modes/Java.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/Java.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/Java.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/Java.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/Java.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/Javascript.mode/Contents/Info.plist -text
 Modes/Javascript.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/Javascript.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/Javascript.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/Javascript.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/Javascript.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/LaTeX.mode/Contents/Info.plist -text
 Modes/LaTeX.mode/Contents/Resources/AutocompleteAdditions.txt -text
 Modes/LaTeX.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/LaTeX.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/LaTeX.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/LaTeX.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/LaTeX.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/Objective-C.mode/Contents/Info.plist -text
 Modes/Objective-C.mode/Contents/Resources/AutocompleteAdditions.txt -text
 Modes/Objective-C.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/Objective-C.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/Objective-C.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/Objective-C.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/Objective-C.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/PHP-HTML.mode/Contents/Info.plist -text
 Modes/PHP-HTML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/PHP-HTML.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/PHP-HTML.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/PHP-HTML.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/PHP-HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/Pascal.mode/Contents/Info.plist -text
 Modes/Pascal.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/Pascal.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/Pascal.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/Pascal.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/Pascal.mode/Contents/Resources/SymbolD.png -text
 Modes/Pascal.mode/Contents/Resources/SymbolO.png -text
 Modes/Pascal.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/Perl.mode/Contents/Info.plist -text
 Modes/Perl.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/Perl.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/Perl.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/Perl.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/Perl.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/Python.mode/Contents/Info.plist -text
 Modes/Python.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/Python.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/Python.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/Python.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/Python.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/Ruby.mode/Contents/Info.plist -text
 Modes/Ruby.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/Ruby.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/Ruby.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/Ruby.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/Ruby.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/SQL.mode/Contents/Info.plist -text
 Modes/SQL.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/SQL.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/SQL.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/SQL.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/SQL.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/XML.mode/Contents/Info.plist -text
 Modes/XML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/XML.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/XML.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/XML.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/XML.mode/Contents/Resources/Symbol!.png -text
 Modes/XML.mode/Contents/Resources/SymbolID.png -text
 Modes/XML.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/bash.mode/Contents/Info.plist -text
 Modes/bash.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+Modes/bash.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
+Modes/bash.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/bash.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/bash.mode/Contents/Resources/SyntaxDefinition.xml -text
 MoreIsBetter/MoreCFQ.c -text
