--- a/Modes/PHP-HTML.mode/Contents/Info.plist
+++ b/Modes/PHP-HTML.mode/Contents/Info.plist
@@ -22,6 +22,7 @@
 	   <string>php3</string>
 	   <string>php4</string>
 	   <string>phtml</string>
+	   <string>inc</string>
 	</array>
 </dict>
 </plist>
