--- a/Modes/XML.mode/Contents/Info.plist
+++ b/Modes/XML.mode/Contents/Info.plist
@@ -24,6 +24,8 @@
 	   <string>plist</string>
 	   <string>rss</string>
 	   <string>rdf</string>
+	   <string>ct</string>
+	   <string>cpt</string>
 	</array>
 </dict>
 </plist>
