--- a/.gitattributes
+++ b/.gitattributes
@@ -35,6 +35,72 @@ Debug/DebugUsers.nib/keyedobjects.nib -text
 /DocumentModeManager.m -text
 /DocumentProxyWindowController.h -text
 /DocumentProxyWindowController.m -text
+Dutch.lproj/AboutPanel.nib/classes.nib -text
+Dutch.lproj/AboutPanel.nib/info.nib -text
+Dutch.lproj/AboutPanel.nib/keyedobjects.nib -text
+Dutch.lproj/Acknowledgements.rtf -text
+Dutch.lproj/DocumentProxy.nib/classes.nib -text
+Dutch.lproj/DocumentProxy.nib/info.nib -text
+Dutch.lproj/DocumentProxy.nib/keyedobjects.nib -text
+Dutch.lproj/EditPrefs.nib/classes.nib -text
+Dutch.lproj/EditPrefs.nib/info.nib -text
+Dutch.lproj/EditPrefs.nib/keyedobjects.nib -text
+Dutch.lproj/FindAll.nib/classes.nib -text
+Dutch.lproj/FindAll.nib/info.nib -text
+Dutch.lproj/FindAll.nib/keyedobjects.nib -text
+Dutch.lproj/FindReplace.nib/classes.nib -text
+Dutch.lproj/FindReplace.nib/info.nib -text
+Dutch.lproj/FindReplace.nib/keyedobjects.nib -text
+Dutch.lproj/GeneralPrefs.nib/classes.nib -text
+Dutch.lproj/GeneralPrefs.nib/info.nib -text
+Dutch.lproj/GeneralPrefs.nib/keyedobjects.nib -text
+Dutch.lproj/InfoPlist.strings -text
+Dutch.lproj/InternetBrowser.nib/classes.nib -text
+Dutch.lproj/InternetBrowser.nib/info.nib -text
+Dutch.lproj/InternetBrowser.nib/keyedobjects.nib -text
+Dutch.lproj/License.rtf -text
+Dutch.lproj/Localizable.strings -text
+Dutch.lproj/MainMenu.nib/classes.nib -text
+Dutch.lproj/MainMenu.nib/info.nib -text
+Dutch.lproj/MainMenu.nib/keyedobjects.nib -text
+Dutch.lproj/OpenPanelAccessory.nib/classes.nib -text
+Dutch.lproj/OpenPanelAccessory.nib/info.nib -text
+Dutch.lproj/OpenPanelAccessory.nib/keyedobjects.nib -text
+Dutch.lproj/PlainTextEditor.nib/classes.nib -text
+Dutch.lproj/PlainTextEditor.nib/info.nib -text
+Dutch.lproj/PlainTextEditor.nib/keyedobjects.nib -text
+Dutch.lproj/PlainTextWindow.nib/classes.nib -text
+Dutch.lproj/PlainTextWindow.nib/info.nib -text
+Dutch.lproj/PlainTextWindow.nib/keyedobjects.nib -text
+Dutch.lproj/RendezvousBrowser.nib/classes.nib -text
+Dutch.lproj/RendezvousBrowser.nib/info.nib -text
+Dutch.lproj/RendezvousBrowser.nib/keyedobjects.nib -text
+Dutch.lproj/SavePanelAccessory.nib/classes.nib -text
+Dutch.lproj/SavePanelAccessory.nib/info.nib -text
+Dutch.lproj/SavePanelAccessory.nib/keyedobjects.nib -text
+Dutch.lproj/SelectEncodingsPanel.nib/classes.nib -text
+Dutch.lproj/SelectEncodingsPanel.nib/info.nib -text
+Dutch.lproj/SelectEncodingsPanel.nib/objects.nib -text
+Dutch.lproj/Setup.nib/classes.nib -text
+Dutch.lproj/Setup.nib/info.nib -text
+Dutch.lproj/Setup.nib/keyedobjects.nib -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help[!!-~]idx -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help.html -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/css/access.css -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/css/task_tbl_style.css -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/html/learn.html -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/html/new.html -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/html/overview.html -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/html/problems.html -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/html/shortcuts.html -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/html/tips.html -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/img/favicon.png -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/img/see-small.png -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/img/see.png -text
+Dutch.lproj/SubEthaEdit[!!-~]Help/img/vertline2.gif -text
+Dutch.lproj/WebPreview.nib/classes.nib -text
+Dutch.lproj/WebPreview.nib/info.nib -text
+Dutch.lproj/WebPreview.nib/keyedobjects.nib -text
 /EditPreferences.h -text
 /EditPreferences.m -text
 /EncodingManager.h -text
@@ -285,6 +351,7 @@ Modes/Applescript.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/Applescript.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/Applescript.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/Base.mode/Contents/Info.plist -text
+Modes/Base.mode/Contents/Resources/Dutch.lproj/InfoPlist.strings -text
 Modes/Base.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 Modes/Base.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
 Modes/Base.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
