- Adding Traditional Chinese localization

--- a/.gitattributes
+++ b/.gitattributes
@@ -355,6 +355,7 @@ Modes/Base.mode/Contents/Resources/Dutch.lproj/InfoPlist.strings -text
 Modes/Base.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 Modes/Base.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
 Modes/Base.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
+Modes/Base.mode/Contents/Resources/zh_TW.lproj/InfoPlist.strings -text
 Modes/C++.mode/Contents/Info.plist -text
 Modes/C++.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 Modes/C++.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
@@ -869,3 +870,69 @@ artwork/myriad.png -text
 see/main.m -text
 see/see.1 -text
 /version.plist -text
+zh_TW.lproj/AboutPanel.nib/classes.nib -text
+zh_TW.lproj/AboutPanel.nib/info.nib -text
+zh_TW.lproj/AboutPanel.nib/keyedobjects.nib -text
+zh_TW.lproj/Acknowledgements.rtf -text
+zh_TW.lproj/DocumentProxy.nib/classes.nib -text
+zh_TW.lproj/DocumentProxy.nib/info.nib -text
+zh_TW.lproj/DocumentProxy.nib/keyedobjects.nib -text
+zh_TW.lproj/EditPrefs.nib/classes.nib -text
+zh_TW.lproj/EditPrefs.nib/info.nib -text
+zh_TW.lproj/EditPrefs.nib/keyedobjects.nib -text
+zh_TW.lproj/FindAll.nib/classes.nib -text
+zh_TW.lproj/FindAll.nib/info.nib -text
+zh_TW.lproj/FindAll.nib/keyedobjects.nib -text
+zh_TW.lproj/FindReplace.nib/classes.nib -text
+zh_TW.lproj/FindReplace.nib/info.nib -text
+zh_TW.lproj/FindReplace.nib/keyedobjects.nib -text
+zh_TW.lproj/GeneralPrefs.nib/classes.nib -text
+zh_TW.lproj/GeneralPrefs.nib/info.nib -text
+zh_TW.lproj/GeneralPrefs.nib/keyedobjects.nib -text
+zh_TW.lproj/InfoPlist.strings -text
+zh_TW.lproj/InternetBrowser.nib/classes.nib -text
+zh_TW.lproj/InternetBrowser.nib/info.nib -text
+zh_TW.lproj/InternetBrowser.nib/keyedobjects.nib -text
+zh_TW.lproj/License.rtf -text
+zh_TW.lproj/Localizable.strings -text
+zh_TW.lproj/MainMenu.nib/classes.nib -text
+zh_TW.lproj/MainMenu.nib/info.nib -text
+zh_TW.lproj/MainMenu.nib/keyedobjects.nib -text
+zh_TW.lproj/OpenPanelAccessory.nib/classes.nib -text
+zh_TW.lproj/OpenPanelAccessory.nib/info.nib -text
+zh_TW.lproj/OpenPanelAccessory.nib/keyedobjects.nib -text
+zh_TW.lproj/PlainTextEditor.nib/classes.nib -text
+zh_TW.lproj/PlainTextEditor.nib/info.nib -text
+zh_TW.lproj/PlainTextEditor.nib/keyedobjects.nib -text
+zh_TW.lproj/PlainTextWindow.nib/classes.nib -text
+zh_TW.lproj/PlainTextWindow.nib/info.nib -text
+zh_TW.lproj/PlainTextWindow.nib/keyedobjects.nib -text
+zh_TW.lproj/RendezvousBrowser.nib/classes.nib -text
+zh_TW.lproj/RendezvousBrowser.nib/info.nib -text
+zh_TW.lproj/RendezvousBrowser.nib/keyedobjects.nib -text
+zh_TW.lproj/SavePanelAccessory.nib/classes.nib -text
+zh_TW.lproj/SavePanelAccessory.nib/info.nib -text
+zh_TW.lproj/SavePanelAccessory.nib/keyedobjects.nib -text
+zh_TW.lproj/SelectEncodingsPanel.nib/classes.nib -text
+zh_TW.lproj/SelectEncodingsPanel.nib/info.nib -text
+zh_TW.lproj/SelectEncodingsPanel.nib/objects.nib -text
+zh_TW.lproj/Setup.nib/classes.nib -text
+zh_TW.lproj/Setup.nib/info.nib -text
+zh_TW.lproj/Setup.nib/keyedobjects.nib -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help[!!-~]idx -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help.html -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/css/access.css -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/css/task_tbl_style.css -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/html/learn.html -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/html/new.html -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/html/overview.html -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/html/problems.html -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/html/shortcuts.html -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/html/tips.html -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/img/favicon.png -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/img/see-small.png -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/img/see.png -text
+zh_TW.lproj/SubEthaEdit[!!-~]Help/img/vertline2.gif -text
+zh_TW.lproj/WebPreview.nib/classes.nib -text
+zh_TW.lproj/WebPreview.nib/info.nib -text
+zh_TW.lproj/WebPreview.nib/keyedobjects.nib -text
