--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,73 @@
 /AppController.m -text
 /ButtonScrollView.h -text
 /ButtonScrollView.m -text
+Catalan.lproj/AboutPanel.nib/classes.nib -text
+Catalan.lproj/AboutPanel.nib/info.nib -text
+Catalan.lproj/AboutPanel.nib/keyedobjects.nib -text
+Catalan.lproj/Acknowledgements.rtf -text
+Catalan.lproj/DocumentProxy.nib/classes.nib -text
+Catalan.lproj/DocumentProxy.nib/info.nib -text
+Catalan.lproj/DocumentProxy.nib/keyedobjects.nib -text
+Catalan.lproj/EditPrefs.nib/classes.nib -text
+Catalan.lproj/EditPrefs.nib/info.nib -text
+Catalan.lproj/EditPrefs.nib/keyedobjects.nib -text
+Catalan.lproj/FindAll.nib/classes.nib -text
+Catalan.lproj/FindAll.nib/data.dependency -text
+Catalan.lproj/FindAll.nib/info.nib -text
+Catalan.lproj/FindAll.nib/keyedobjects.nib -text
+Catalan.lproj/FindReplace.nib/classes.nib -text
+Catalan.lproj/FindReplace.nib/info.nib -text
+Catalan.lproj/FindReplace.nib/keyedobjects.nib -text
+Catalan.lproj/GeneralPrefs.nib/classes.nib -text
+Catalan.lproj/GeneralPrefs.nib/info.nib -text
+Catalan.lproj/GeneralPrefs.nib/keyedobjects.nib -text
+Catalan.lproj/InfoPlist.strings -text
+Catalan.lproj/InternetBrowser.nib/classes.nib -text
+Catalan.lproj/InternetBrowser.nib/info.nib -text
+Catalan.lproj/InternetBrowser.nib/keyedobjects.nib -text
+Catalan.lproj/License.rtf -text
+Catalan.lproj/Localizable.strings -text
+Catalan.lproj/MainMenu.nib/classes.nib -text
+Catalan.lproj/MainMenu.nib/info.nib -text
+Catalan.lproj/MainMenu.nib/keyedobjects.nib -text
+Catalan.lproj/OpenPanelAccessory.nib/classes.nib -text
+Catalan.lproj/OpenPanelAccessory.nib/info.nib -text
+Catalan.lproj/OpenPanelAccessory.nib/keyedobjects.nib -text
+Catalan.lproj/PlainTextEditor.nib/classes.nib -text
+Catalan.lproj/PlainTextEditor.nib/info.nib -text
+Catalan.lproj/PlainTextEditor.nib/keyedobjects.nib -text
+Catalan.lproj/PlainTextWindow.nib/classes.nib -text
+Catalan.lproj/PlainTextWindow.nib/info.nib -text
+Catalan.lproj/PlainTextWindow.nib/keyedobjects.nib -text
+Catalan.lproj/RendezvousBrowser.nib/classes.nib -text
+Catalan.lproj/RendezvousBrowser.nib/info.nib -text
+Catalan.lproj/RendezvousBrowser.nib/keyedobjects.nib -text
+Catalan.lproj/SavePanelAccessory.nib/classes.nib -text
+Catalan.lproj/SavePanelAccessory.nib/info.nib -text
+Catalan.lproj/SavePanelAccessory.nib/keyedobjects.nib -text
+Catalan.lproj/SelectEncodingsPanel.nib/classes.nib -text
+Catalan.lproj/SelectEncodingsPanel.nib/info.nib -text
+Catalan.lproj/SelectEncodingsPanel.nib/objects.nib -text
+Catalan.lproj/Setup.nib/classes.nib -text
+Catalan.lproj/Setup.nib/info.nib -text
+Catalan.lproj/Setup.nib/keyedobjects.nib -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help[!!-~]idx -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help.html -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/css/access.css -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/css/task_tbl_style.css -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/html/learn.html -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/html/new.html -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/html/overview.html -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/html/problems.html -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/html/shortcuts.html -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/html/tips.html -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/img/favicon.png -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/img/see-small.png -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/img/see.png -text
+Catalan.lproj/SubEthaEdit[!!-~]Help/img/vertline2.gif -text
+Catalan.lproj/WebPreview.nib/classes.nib -text
+Catalan.lproj/WebPreview.nib/info.nib -text
+Catalan.lproj/WebPreview.nib/keyedobjects.nib -text
 Danish.lproj/AboutPanel.nib/classes.nib -text
 Danish.lproj/AboutPanel.nib/info.nib -text
 Danish.lproj/AboutPanel.nib/keyedobjects.nib -text
@@ -415,6 +482,7 @@ Modes/Applescript.mode/Contents/Resources/Japanese.lproj/InfoPlist.strings -text
 Modes/Applescript.mode/Contents/Resources/RegexSymbols.xml -text
 Modes/Applescript.mode/Contents/Resources/SyntaxDefinition.xml -text
 Modes/Base.mode/Contents/Info.plist -text
+Modes/Base.mode/Contents/Resources/Catalan.lproj/InfoPlist.strings -text
 Modes/Base.mode/Contents/Resources/Dutch.lproj/InfoPlist.strings -text
 Modes/Base.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 Modes/Base.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
