--- a/.gitattributes
+++ b/.gitattributes
@@ -309,20 +309,20 @@ subethaedit/English.lproj/SelectEncodingsPanel.nib/objects.nib -text
 subethaedit/English.lproj/Setup.nib/classes.nib -text
 subethaedit/English.lproj/Setup.nib/info.nib -text
 subethaedit/English.lproj/Setup.nib/keyedobjects.nib -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help[!!-~]idx -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/SubEthaEdit[!!-~]Help.html -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/css/access.css -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/css/task_tbl_style.css -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/html/learn.html -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/html/new.html -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/html/overview.html -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/html/problems.html -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/html/shortcuts.html -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/html/tips.html -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/img/favicon.png -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/img/see-small.png -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/img/see.png -text
-subethaedit/English.lproj/SubEthaEdit[!!-~]Help/img/vertline2.gif -text
+subethaedit/English.lproj/SubEthaEditHelp/SubEthaEdit[!!-~]Help[!!-~]idx -text
+subethaedit/English.lproj/SubEthaEditHelp/SubEthaEdit[!!-~]Help.html -text
+subethaedit/English.lproj/SubEthaEditHelp/css/access.css -text
+subethaedit/English.lproj/SubEthaEditHelp/css/task_tbl_style.css -text
+subethaedit/English.lproj/SubEthaEditHelp/html/learn.html -text
+subethaedit/English.lproj/SubEthaEditHelp/html/new.html -text
+subethaedit/English.lproj/SubEthaEditHelp/html/overview.html -text
+subethaedit/English.lproj/SubEthaEditHelp/html/problems.html -text
+subethaedit/English.lproj/SubEthaEditHelp/html/shortcuts.html -text
+subethaedit/English.lproj/SubEthaEditHelp/html/tips.html -text
+subethaedit/English.lproj/SubEthaEditHelp/img/favicon.png -text
+subethaedit/English.lproj/SubEthaEditHelp/img/see-small.png -text
+subethaedit/English.lproj/SubEthaEditHelp/img/see.png -text
+subethaedit/English.lproj/SubEthaEditHelp/img/vertline2.gif -text
 subethaedit/English.lproj/WebPreview.nib/classes.nib -text
 subethaedit/English.lproj/WebPreview.nib/info.nib -text
 subethaedit/English.lproj/WebPreview.nib/keyedobjects.nib -text
