--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -225,9 +225,9 @@
 	<key>CFBundleName</key>
 	<string>SubEthaEdit</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0.1</string>
+	<string>2.1dev</string>
 	<key>CFBundleGetInfoString</key>
-	<string>SubEthaEdit 2.0.1, Copyright © 2003-2004, TheCodingMonkeys</string>
+	<string>SubEthaEdit 2.1dev, Copyright © 2003-2004, TheCodingMonkeys</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2003-2004, TheCodingMonkeys</string>
 	<key>CFBundleHelpBookFolder</key>
