* Setup.plist   Description of different setup scenarios. Per scenario you have a ordered list  of item which should be shown.
* SubEthaEdit.xcode/project.pbxproj
  Added Setup.plist to 'SubEthaEdit' target.

* SetupController.h
* SetupController.m
  Added support for setup descriptions in a property list. Now shows update
  scenario when minor version is greater than previous launched version of SEE.

* English.lproj/Setup.nib
  Added tab items for 'What's new' and 'Install command line tool'.

* AppController.m
  Supports new 'SetupVersion' pref key featured by SetupController and asks
  SetupController whether setup should be run or not.

--- a/.gitattributes
+++ b/.gitattributes
@@ -809,6 +809,7 @@ subethaedit/SelectionOperation.h -text
 subethaedit/SelectionOperation.m -text
 subethaedit/SessionProfile.h -text
 subethaedit/SessionProfile.m -text
+subethaedit/Setup.plist -text
 subethaedit/SetupController.h -text
 subethaedit/SetupController.m -text
 subethaedit/SplitView.h -text
