- made good progress on the HTML export front - still missing: right behaviour on different background/foreground colors - copy XHTML still sets the font-family - localized texts for Visitors Contributors havent been included in the   localizable.strings yet

--- a/.gitattributes
+++ b/.gitattributes
@@ -270,6 +270,9 @@ subethaedit/English.lproj/DocumentProxy.nib/keyedobjects.nib -text
 subethaedit/English.lproj/EditPrefs.nib/classes.nib -text
 subethaedit/English.lproj/EditPrefs.nib/info.nib -text
 subethaedit/English.lproj/EditPrefs.nib/keyedobjects.nib -text
+subethaedit/English.lproj/Export.nib/classes.nib -text
+subethaedit/English.lproj/Export.nib/info.nib -text
+subethaedit/English.lproj/Export.nib/keyedobjects.nib -text
 subethaedit/English.lproj/FindAll.nib/classes.nib -text
 subethaedit/English.lproj/FindAll.nib/info.nib -text
 subethaedit/English.lproj/FindAll.nib/keyedobjects.nib -text
