--- a/.gitattributes
+++ b/.gitattributes
@@ -462,6 +462,8 @@ subethaedit/MoreIsBetter/MoreUNIX.c -text
 subethaedit/MoreIsBetter/MoreUNIX.h -text
 subethaedit/MultiPagePrintView.h -text
 subethaedit/MultiPagePrintView.m -text
+subethaedit/NSApplicationTCMAdditions.h -text
+subethaedit/NSApplicationTCMAdditions.m -text
 subethaedit/NSColorTCMAdditions.h -text
 subethaedit/NSColorTCMAdditions.m -text
 subethaedit/NSDataTCMAdditions.h -text
