--- a/.gitattributes
+++ b/.gitattributes
@@ -467,6 +467,8 @@ subethaedit/MultiPagePrintView.h -text
 subethaedit/MultiPagePrintView.m -text
 subethaedit/NSApplicationTCMAdditions.h -text
 subethaedit/NSApplicationTCMAdditions.m -text
+subethaedit/NSCalendarDateTCMAdditions.h -text
+subethaedit/NSCalendarDateTCMAdditions.m -text
 subethaedit/NSColorTCMAdditions.h -text
 subethaedit/NSColorTCMAdditions.m -text
 subethaedit/NSDataTCMAdditions.h -text
