* InternetBrowserController.m   Fixed first part of #SEE-156 which prevented cancelling connections to users   who transitioned from visible to invisible. Setting visibility user default   according to pop up menu.
* TCMMillionMonkeys/TCMMMPresenceManager.m
  No longer sets visibility user default in -setVisible: because visibility is
  always set to NO using this method when app terminates.
  
* SubEthaEdit.xcode/project.pbxproj
  Removed see/main_derived.m from project and the script build phase from the
  see target. Added a rule to the see target which inserts the current version
  number and genereates a .c file which then gets compiled and linked as
  usual.

* RendezvousBrowserController.m
  Setting visibility user default according to pop up menu.
  
* see/main.m
  Additionally specified application name in each LSFindApplicationForInfo()
  call. This should help LaunchServices to find SubEthaEdit more reliable.
  Version info is now read from two global variables.

* see/see.vers
  Added this file which defines to global variables for version information.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1014,4 +1014,5 @@ subethaedit/debug.tiff -text
 subethaedit/main.m -text
 subethaedit/see/main.m -text
 subethaedit/see/see.1 -text
+subethaedit/see/see.vers -text
 subethaedit/version.plist -text
