- now with small symbol indicating wait and pipe - setIsWaiting has to be implemented

--- a/.gitattributes
+++ b/.gitattributes
@@ -1006,6 +1006,7 @@ subethaedit/artwork/SymbolT.tiff -text
 subethaedit/artwork/SymbolV.png -text
 subethaedit/artwork/SymbolV.tiff -text
 subethaedit/artwork/URLIcon.tiff -text
+subethaedit/artwork/WaitPipe.png -text
 subethaedit/artwork/WebReload.tiff -text
 subethaedit/artwork/codingmonkeys.png -text
 subethaedit/artwork/myriad.png -text
