--- a/.gitattributes
+++ b/.gitattributes
@@ -56,6 +56,7 @@ documentation/autodoc/HTMLTemplate.html -text
 documentation/connection-channel-bla.jpg -text
 documentation/participants-drawer.jpg -text
 documentation/session-lifcycle.jpg -text
+documentation/syntax-styles-whiteboard.jpg -text
 documentation/whiteboard-1411.jpg -text
 prototype/BEEPSample/BEEPSample.xcode/mbo.pbxuser -text
 prototype/BEEPSample/BEEPSample.xcode/project.pbxproj -text
