- Adding FocusringTableView prototype

--- a/.gitattributes
+++ b/.gitattributes
@@ -186,6 +186,24 @@ prototype/SyntaxTestBench/TextStorage.h -text
 prototype/SyntaxTestBench/TextStorage.m -text
 prototype/SyntaxTestBench/main.m -text
 prototype/SyntaxTestBench/version.plist -text
+prototype/TCMFocusringTableView/Controller.h -text
+prototype/TCMFocusringTableView/Controller.m -text
+prototype/TCMFocusringTableView/English.lproj/InfoPlist.strings -text
+prototype/TCMFocusringTableView/English.lproj/MainMenu.nib/classes.nib -text
+prototype/TCMFocusringTableView/English.lproj/MainMenu.nib/info.nib -text
+prototype/TCMFocusringTableView/English.lproj/MainMenu.nib/keyedobjects.nib -text
+prototype/TCMFocusringTableView/English.lproj/MainMenu~.nib/classes.nib -text
+prototype/TCMFocusringTableView/English.lproj/MainMenu~.nib/info.nib -text
+prototype/TCMFocusringTableView/English.lproj/MainMenu~.nib/keyedobjects.nib -text
+prototype/TCMFocusringTableView/Info.plist -text
+prototype/TCMFocusringTableView/TCMFocusringTableView.h -text
+prototype/TCMFocusringTableView/TCMFocusringTableView.m -text
+prototype/TCMFocusringTableView/TCMFocusringTableView.xcode/pittenau.mode1 -text
+prototype/TCMFocusringTableView/TCMFocusringTableView.xcode/pittenau.pbxuser -text
+prototype/TCMFocusringTableView/TCMFocusringTableView.xcode/project.pbxproj -text
+prototype/TCMFocusringTableView/TCMFocusringTableView_Prefix.pch -text
+prototype/TCMFocusringTableView/main.m -text
+prototype/TCMFocusringTableView/version.plist -text
 prototype/TCMXMLParser/ParserDelegate.h -text
 prototype/TCMXMLParser/ParserDelegate.m -text
 prototype/TCMXMLParser/TCMXMLParser.1 -text
