--- a/.gitattributes
+++ b/.gitattributes
@@ -926,6 +926,8 @@ subethaedit/TCMPreferenceModule.h -text
 subethaedit/TCMPreferenceModule.m -text
 subethaedit/TCMRendezvousBrowser.h -text
 subethaedit/TCMRendezvousBrowser.m -text
+subethaedit/TableView.h -text
+subethaedit/TableView.m -text
 subethaedit/TextOperation.h -text
 subethaedit/TextOperation.m -text
 subethaedit/TextStorage.h -text
