--- a/.gitattributes
+++ b/.gitattributes
@@ -928,6 +928,8 @@ subethaedit/TCMRendezvousBrowser.h -text
 subethaedit/TCMRendezvousBrowser.m -text
 subethaedit/TableView.h -text
 subethaedit/TableView.m -text
+subethaedit/TextFieldCell.h -text
+subethaedit/TextFieldCell.m -text
 subethaedit/TextOperation.h -text
 subethaedit/TextOperation.m -text
 subethaedit/TextStorage.h -text
